--- a/Forgot_passwword.html
+++ b/Forgot_passwword.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quên Mật Khẩu - TBS Logisstics(Mockup)</title>
+    <title>Quên Mật Khẩu - TBS Logisstics</title>
     <link href="Forgot_passwword.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min css"
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -20,7 +20,7 @@
         <div class="container">
             <div></div>
             <form class="card" action="#" method="post">
-                <h2>Quên Mật Khẩu</h2>
+            <h2>Quên Mật Khẩu</h2>
 
                 <label class="field">
                     <span class="label">Tên Đăng Nhập</span>
