--- a/Room.html
+++ b/Room.html
@@ -1,277 +1,228 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Quản Lí Phòng Họp – TBS Logistics</title>
-  <link rel="stylesheet" href="Room.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Quản Lí Phòng Họp – TBS Logistics</title>
+    <link rel="stylesheet" href="Room.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!-- TOPBAR -->
-  <header class="topbar">
-    <div class="brand">
-      <img src="./Assets/Logo.png" alt="TBS Logistics" class="logo" />
+    <!-- TOPBAR -->
+    <header class="topbar">
+        <div class="brand">
+            <img src="./Assets/Logo.png" alt="TBS Logistics" class="logo" />
+        </div>
+        <nav class="topnav">
+            <a href="#">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" 
+                viewBox="0 0 24 24" fill="none" stroke="currentColor" 
+                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M3 9.5L12 3l9 6.5V21a1 1 0 0 1-1 1h-5v-7H9v7H4a1 1 0 0 1-1-1V9.5z"/>
+                </svg>
+                Trang Chủ
+            </a>
+            <div class="notif">
+                <button id="notifBtn" class="notif-btn" aria-expanded="false">
+                    <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M18 8a6 6 0 10-12 0c0 7-3 9-3 9h18s-3-2-3-9"/>
+                        <circle cx="12" cy="19" r="1"/>
+                    </svg>
+                    Thông Báo
+                </button>
+
+                <!-- Panel thông báo -->
+                <div id="notifPanel" class="notif-panel" aria-hidden="true">
+                    <div class="notif-list">
+                        <div class="notif-item unread approver">
+                            <div class="title">Yêu cầu mới: Phòng ICD30</div>
+                            <div class="msg">Nguyễn Văn A (IT) đặt phòng 08:00 – 10:00 25/09</div>
+                            <div class="actions">
+                                <button class="btn small">Duyệt</button>
+                                <button class="btn small gray">Từ chối</button>
+                            </div>
+                        </div>
+                        <div class="notif-item unread approver">
+                            <div class="title">Yêu cầu mới: Phòng ICD30</div>
+                            <div class="msg">Trần Thị B (Nhân Sự) đặt phòng 07:30 – 11:00 25/09</div>
+                            <div class="actions">
+                                <button class="btn small">Duyệt</button>
+                                <button class="btn small gray">Từ chối</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <a href="index.html">Đăng Xuất</a>
+        </nav>
+    </header>
+
+    <!-- LAYOUT -->
+    <div class="layout">
+        <aside class="sidenav">
+            <div class="side-item">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"stroke-width="2">
+                    <path d="M4 6h16M4 12h16M4 18h16"/>
+                </svg>
+                <span>Menu</span>
+            </div>
+
+            <div class="side-item">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <circle cx="12" cy="8" r="4"/>
+                    <path d="M4 20a8 8 0 0116 0"/>
+                </svg>
+                <span>Thông Tin Cá Nhân</span>
+            </div>
+
+            <div class="side-item">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <rect x="3" y="4" width="18" height="14" rx="2"/>
+                    <path d="M7 8h10M7 12h6"/>
+                </svg>
+                <span>Đăng Kí</span>
+            </div>
+
+            <div class="side-item">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M3 3h18v14H3z"/>
+                    <path d="M8 21h8"/>
+                </svg>
+                <span>Báo Cáo</span>
+            </div>
+        </aside>
     </div>
-    <nav class="topnav">
-      <a href="#">
-        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" 
-             viewBox="0 0 24 24" fill="none" stroke="currentColor" 
-             stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-          <path d="M3 9.5L12 3l9 6.5V21a1 1 0 0 1-1 1h-5v-7H9v7H4a1 1 0 0 1-1-1V9.5z"/>
-        </svg>
-        Trang Chủ
-      </a>
-      <a href="#">
-        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-          <path d="M18 8a6 6 0 10-12 0c0 7-3 9-3 9h18s-3-2-3-9"/>
-          <circle cx="12" cy="19" r="1" />
-        </svg>
-        Thông Báo
-      </a>
-    </nav>
-  </header>
 
-  <!-- LAYOUT -->
-  <div class="layout">
-    <aside class="sidenav">
-                <div class="side-item">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor"stroke-width="2">
-                        <path d="M4 6h16M4 12h16M4 18h16"/>
-                    </svg>
-                    <span>Menu</span>
+    <!-- MODAL -->
+    <div id="idModal" class="modal" aria-hidden="true">
+        <div class="modal__overlay"></div>
+        <div class="modal__card" role="dialog" aria-modal="true" aria-labelledby="title-dk">
+            <div class="modal__head">
+                <h3 id="title-dk" class="modal__title">Thêm Phòng Họp</h3>
+                <button type="button" class="modal__close" aria-label="Đóng">&times;</button>
+            </div>
+
+            <form action="#" method="post">
+                <div class="form-grid">
+                    <label class="field">
+                        <span>ID Phòng <b>*</b></span>
+                        <input name="hoten" type="text" placeholder="Vd: Phòng 102..." required>
+                    </label>
+
+                    <label class="field">
+                        <span>Vị Trí</span>
+                        <select name="vitri">
+                            <option value="">-- Chọn vị trí --</option>
+                            <option>Kho ICD30</option>
+                            <option>Kho 3</option>
+                            <option>Kho 5</option>
+                            <option>Kho 6</option>
+                            <option>Kho 7</option>
+                            <option>Kho 8</option>
+                        </select>
+                    </label>
+
+                    <label class="field">
+                        <span>Sức chứa <b>*</b></span>
+                        <input name="succhua" type="" placeholder="Sức chứa..." required>
+                    </label>
+
+                    <label class="field">
+                        <span>Ngày nhập</span>
+                        <input name="ngaynhap" type="date" required>
+                    </label>
+
+                    <label class="field">
+                        <span>Trạng Thái</span>
+                        <select name="vitri">
+                            <option value="">-- Chọn trạng thái --</option>
+                            <option>Hoạt Động</option>
+                            <option>Tạm Dừng</option>
+                            <option>Đóng</option>
+                        </select>
+                    </label>
+
+                    <label class="field">
+                        <span>Ghi chú</span>
+                        <div class="editable" contenteditable="true" data-placeholder="Ghi chú..."></div>
+                    </label>
                 </div>
 
-                <div class="side-item">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <circle cx="12" cy="8" r="4"/>
-                        <path d="M4 20a8 8 0 0116 0"/>
-                    </svg>
-                    <span>Thông Tin Cá Nhân</span>
+                <div class="actions">
+                    <button type="button" class="btn gray js-cancel">Hủy</button>
+                    <button class="btn" type="submit">Xác nhận</button>
                 </div>
-
-                <div class="side-item">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <rect x="3" y="4" width="18" height="14" rx="2"/>
-                        <path d="M7 8h10M7 12h6"/>
-                    </svg>
-                    <span>Đăng Kí</span>
-                </div>
-
-                <div class="side-item">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M3 3h18v14H3z"/>
-                        <path d="M8 21h8"/>
-                    </svg>
-                    <span>Báo Cáo</span>
-                </div>
-            </aside>
-
-    <!-- MAIN -->
-    <main class="main">
-      <section class="card page">
-        <h2 class="title">Quản Lí Phòng Họp</h2>
-
-        <!-- TOOLBAR -->
-        <div class="toolbar">
-          <div class="search">
-            <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" stroke-width="2">
-              <circle cx="11" cy="11" r="7"/><path d="m21 21-4.3-4.3"/>
-            </svg>
-            <input type="text" placeholder="Tìm kiếm..." />
-          </div>
-          <div class="field">
-                <label class="label">Giờ</label>
-                <input class="input" type="time"/>
-                        <circle cx="12" cy="12" r="9"/>
-                        <path d="M12 7v513 3"/>
-          </div>
-
-          <div class="filters">
-            <select>
-              <option value="">Vị Trí</option>
-              <option>Kho ICD30</option>
-              <option>Kho 3 </option>
-              <option>Kho 5</option>
-              <option>Kho 6</option>
-              <option>Kho 7</option>
-              <option>Kho 8</option>
-            </select>
-            <select>
-              <option value="">Sức Chứa</option>
-              <option>10 người</option>
-              <option>15 người</option>
-              <option>20 người</option>
-            </select>
-            <select>
-              <option value="">Trạng Thái</option>
-              <option>Đã Đăng kích</option>
-              <option>Chờ Phê Duyệt</option>
-              <option>Trống</option>
-            </select>
-          </div>
-
-          <div class="actions actions-left">
-            <button id="openRegBtn" class="btn">Thêm Phòng Họp</button>
-          </div>
+            </form>
         </div>
-
-        <!-- BẢNG -->
-        <div class="table-wrap">
-          <table>
-            <thead>
-              <tr>
-                <th>ID Phòng</th>
-                <th>Vị Trí</th>
-                <th>Sức Chứa</th>
-                <th>Trạng Thái</th>
-                <th></th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Kho ICD30</td>
-                <td>Kho ICD30</td>
-                <td>1000 người </td>
-                <td><span class="badge ok">Hoạt động</span></td>
-                <td class="actions">
-                  <button class="btn ghost">Sửa</button>
-                  <button class="btn ghost danger">Khoá</button>
-                </td>
-              </tr>
-              <tr>
-                <td>Kho 3</td>
-                <td>Kho 3</td>
-                <td>40 người</td>
-                <td><span class="badge block">Đóng</span></td>
-                <td class="actions">
-                  <button class="btn ghost">Sửa</button>
-                  <button class="btn ghost danger">Khoá</button>
-                </td>
-              </tr>
-              <tr>
-                <td>Kho 3</td>
-                <td>Kho 3</td>
-                <td>100 người</td>
-                <td><span class="badge warn">Tạm Dừng</span></td>
-                <td class="actions">
-                  <button class="btn ghost">Sửa</button>
-                  <button class="btn ghost danger">Khoá</button>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </section>
-    </main>
-  </div>
-
-  <!-- MODAL -->
-  <div id="idModal" class="modal" aria-hidden="true">
-    <div class="modal__overlay"></div>
-
-    <div class="modal__card" role="dialog" aria-modal="true" aria-labelledby="title-dk">
-      <div class="modal__head">
-        <h3 id="title-dk" class="modal__title">Thêm Phòng Họp</h3>
-        <button type="button" class="modal__close" aria-label="Đóng">&times;</button>
-      </div>
-
-      <form action="#" method="post">
-        <div class="form-grid">
-          <label class="field">
-            <span>ID Phòng <b>*</b></span>
-            <input name="hoten" type="text" placeholder="Vd: Phòng 102..." required>
-          </label>
-
-          <label class="field">
-            <span>Vị Trí</span>
-            <select name="vitri">
-              <option value="">-- Chọn vị trí --</option>
-              <option>Kho ICD30</option>
-              <option>Kho 3</option>
-              <option>Kho 5</option>
-              <option>Kho 6</option>
-              <option>Kho 7</option>
-              <option>Kho 8</option>
-            </select>
-          </label>
-
-          <label class="field">
-            <span>Sức chứa <b>*</b></span>
-            <input name="succhua" type="" placeholder="Sức chứa..." required>
-          </label>
-
-          <label class="field">
-            <span>Ngày nhập</span>
-            <input name="ngaynhap" type="date" required>
-          </label>
-
-          <label class="field">
-            <span>Trạng Thái</span>
-            <select name="vitri">
-              <option value="">-- Chọn trạng thái --</option>
-              <option>Hoạt Động</option>
-              <option>Tạm Dừng</option>
-              <option>Đóng</option>
-            </select>
-          </label>
-
-          <label class="field">
-                <span>Ghi chú</span>
-                <div class="editable" contenteditable="true" data-placeholder="Ghi chú..."></div>
-          </label>
-        </div>
-
-        <div class="actions">
-          <button type="button" class="btn gray js-cancel">Hủy</button>
-          <button class="btn" type="submit">Xác nhận</button>
-        </div>
-      </form>
     </div>
-  </div>
 
-  <!-- SCRIPT --> 
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const openBtn = document.getElementById('openRegBtn');
-      const modal   = document.getElementById('idModal');
-      if (!openBtn || !modal) return;
+    <!-- SCRIPT --> 
+    <script>
+      document.addEventListener('DOMContentLoaded', () => {
+        const openBtn = document.getElementById('openRegBtn');
+        const modal   = document.getElementById('idModal');
+        if (!openBtn || !modal) return;
 
-      const overlay = modal.querySelector('.modal__overlay');
-      const btnX    = modal.querySelector('.modal__close');
-      const btnCancel = modal.querySelector('.js-cancel');
+        const overlay = modal.querySelector('.modal__overlay');
+        const btnX    = modal.querySelector('.modal__close');
+        const btnCancel = modal.querySelector('.js-cancel');
 
-      const setNow = (container) => {
-      const now = new Date();
+        const setNow = (container) => {
+        const now = new Date();
 
-        // Lấy ngày theo định dạng Việt Nam
-        const dateStr = now.toLocaleDateString('vi-VN'); // ví dụ: 15/9/2025
+          // Lấy ngày theo định dạng Việt Nam
+          const dateStr = now.toLocaleDateString('vi-VN'); // ví dụ: 15/9/2025
 
-        // Gán vào ô tương ứng trong modal
-        const dateInput = container.querySelector('input[data-date]');
+          // Gán vào ô tương ứng trong modal
+          const dateInput = container.querySelector('input[data-date]');
 
-        if (dateInput) dateInput.value = dateStr;
+          if (dateInput) dateInput.value = dateStr;
+          };
+          
+        const open = () => {
+          modal.classList.add('is-open');
+          modal.setAttribute('aria-hidden', 'false');
+          document.body.style.overflow = 'hidden';
         };
-        
-      const open = () => {
-        modal.classList.add('is-open');
-        modal.setAttribute('aria-hidden', 'false');
-        document.body.style.overflow = 'hidden';
-      };
-      const close = () => {
-        modal.classList.remove('is-open');
-        modal.setAttribute('aria-hidden', 'true');
-        document.body.style.overflow = '';
-      };
+        const close = () => {
+          modal.classList.remove('is-open');
+          modal.setAttribute('aria-hidden', 'true');
+          document.body.style.overflow = '';
+        };
 
-      openBtn.addEventListener('click', open);
-      overlay && overlay.addEventListener('click', close);
-      btnX && btnX.addEventListener('click', close);
-      btnCancel && btnCancel.addEventListener('click', close);
-      document.addEventListener('keydown', e => { if (e.key === 'Escape') close(); });
-    });
-  </script>
+        openBtn.addEventListener('click', open);
+        overlay && overlay.addEventListener('click', close);
+        btnX && btnX.addEventListener('click', close);
+        btnCancel && btnCancel.addEventListener('click', close);
+        document.addEventListener('keydown', e => { if (e.key === 'Escape') close(); });
+
+        // ===== Notification dropdown =====
+        const notifBtn   = document.getElementById('notifBtn');
+        const notifPanel = document.getElementById('notifPanel');
+
+        const openNotif = () => {
+          notifPanel.classList.add('is-open');
+          notifBtn.setAttribute('aria-expanded', 'true');
+          notifPanel.setAttribute('aria-hidden', 'false');
+        };
+        const closeNotif = () => {
+          notifPanel.classList.remove('is-open');
+          notifBtn.setAttribute('aria-expanded', 'false');
+          notifPanel.setAttribute('aria-hidden', 'true');
+        };
+        const toggleNotif = (e) => {
+          e.stopPropagation();
+          notifPanel.classList.contains('is-open') ? closeNotif() : openNotif();
+        };
+
+        on(notifBtn, 'click', toggleNotif);
+        on(document, 'click', (e) => {
+          if (!notifPanel.contains(e.target) && !notifBtn.contains(e.target)) closeNotif();
+        });
+        on(document, 'keydown', (e) => { if (e.key === 'Escape') closeNotif(); });
+      });
+    </script>
 </body>
 </html>
